feat(public): add passenger auth API for traveler QR journey
Co-authored-by: Cursor <cursoragent@cursor.com>